# ai-goods-backend

./: .gitignore  README.md
.github/workflows/: global.yml  parser.yml  vector_storage.yml
services/: Dockerfile  Makefile  docker-compose.yaml  manage.py
services/ML/: Dockerfile  Makefile  README.md  pyproject.toml  run.py
services/ML/ml/: config.py
services/ML/ml/embeddings/: base.py  image.py  name_image.py  text.py
services/ML/ml/models/: image.py  text.py
services/ML/ml/tasks/: __init__.py  base.py  process_image.py  process_name.py  process_name_image.py
services/ML/tests/: test_embeddings.py
services/agent/: README.md  pyproject.toml  run.py
services/agent/agent/tasks/: __init__.py  base.py  parse.py  search.py
services/api/: main.py  pyproject.toml  run.py
services/api/api/: config.py  dependencies.py  utils.py
services/api/api/routers/: __init__.py  embed.py  parse.py  search.py
services/api/api/tasks/: base.py  embed.py  parse.py  search.py
services/global_modules/: README.md  pyproject.toml  rebuild_global_modules.bat  rebuild_global_modules.ps1  rebuild_global_modules.sh
services/global_modules/global_modules/: config.py  enums.py  types.py
services/global_modules/global_modules/db/: db.py  types.py  uow.py
services/global_modules/global_modules/db/models/: __init__.py  good.py
services/global_modules/global_modules/db/repositories/: __init__.py  base.py  good.py  image.py
services/global_modules/global_modules/db/schemas/: __init__.py  base.py  good.py
services/global_modules/global_modules/db/services/: good.py
services/global_modules/global_modules/models/: __init__.py  good.py
services/global_modules/global_modules/tasks/: base.py  meta.py
services/global_modules/global_modules/tasks/ml/: base.py
services/global_modules/global_modules/tasks/parser/: base.py  get_good.py  get_goods.py
services/global_modules/global_modules/tasks/vector_storage/: add.py  base.py  classes_PyReverse.dot  delete.py  search.py
services/global_modules/global_modules/utils/: download_image.py
services/global_modules/tests/: test_models.py
services/global_modules/tests/db/: test_good.py
services/parser/: Dockerfile  README.md  parser_worker.py  pyproject.toml  run.py  scraper_worker.py
services/parser/parser/: config.py  enums.py
services/parser/parser/models/: __init__.py  good.py
services/parser/parser/parsers/: alibaba.py  base.py  ozon.py  wildberries.py
services/parser/parser/selenium/: client.py
services/parser/parser/tasks/: base.py  get_good.py  get_goods.py
services/parser/tests/: test_alibaba.py  test_celery.py  test_good_model.py  test_ozon.py  test_selenium.py  test_wildberries.py
services/vector_storage/: README.md  pyproject.toml  run.py
services/vector_storage/tests/: test_faiss.py
services/vector_storage/vector_storage/: config.py  storage.py
services/vector_storage/vector_storage/models/: __init__.py
services/vector_storage/vector_storage/repositories/: base.py  faiss.py
services/vector_storage/vector_storage/tasks/: __init__.py  add.py  add_goods.py  base.py  delete.py  get_goods.py  search.py
tests/data/: faiss.emb
