[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
global_modules = { path="../global_modules",  develop=true }
celery = "^5.3.6"
pillow = "^10.1.0"
requests = "^2.31.0"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
