[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.5"
fastapi = {extras = ["all"], version = "^0.104.1"}
redis = "^5.0.1"
global_modules = { path = "../global_modules" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
