[tool.poetry]
name = "global_modules"
version = "0.1.0.13"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
