[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.15.2"
aiohttp = "^3.9.0"
pandas = "^2.1.3"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.3.0"
tqdm = "^4.66.1"
celery = "^5.3.5"
pydantic = "^2.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
